syntax = "proto3";

option csharp_namespace = "BattleShip.Grpc";

service GameService {
  rpc StartGame (StartGameRequest) returns (StartGameResponse);
  rpc Attack (AttackRequest) returns (AttackResponse);
  rpc GetLeaderboard(GetLeaderboardRequest) returns (LeaderboardResponse);
  rpc RollbackTurn(RollbackTurnRequest) returns (RollbackTurnResponse);
  rpc PlaceBoats(PlaceBoatsRequest) returns (PlaceBoatsResponse);
}

message StartGameRequest { 
  int32 sizeGrid = 1;
  int32 difficulty = 2;
}

message StartGameResponse {
  string gameId = 1;
}

message GetLeaderboardRequest { }

message LeaderboardResponse {
  string message = 1;
}

message RollbackTurnRequest {
  string gameId = 1;
}

message RollbackTurnResponse {
  string message = 1;
}

message PlaceBoatsRequest {
  repeated Boat playerBoats = 1;
  string  gameId = 2;
}

message PlaceBoatsResponse {
  string message = 1;
}

message AttackRequest {
  string gameId = 1;
  Position attackPosition = 2;
}

message AttackResponse {
  bool isHit = 1;
  bool isSunk = 2;
  bool isWinner = 3;
  Position position = 4;
}

message Boat {
  string name = 1;
  repeated Position positions = 2;
}

message Position {
  int32 x = 1;
  int32 y = 2;
  bool isHit = 3;
}


